--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "npm": "6.10.0"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1"
